--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ width: 100%;
 <audio id="audio" src="flipbook/pics/page-flip.mp3"></audio>
 
 <a href="https://www.flipbookpdf.net">
-  <img src="/flipbook/img/logo.png" style="position: absolute;bottom:15px;left: 15px;z-index: 100;height: auto; width: auto; max-width: 16%; max-height: 19%;"></a>
+  <img src="./flipbook/img/logo.png" style="position: absolute;bottom:15px;left: 15px;z-index: 100;height: auto; width: auto; max-width: 16%; max-height: 19%;"></a>
   
   
 
