--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
       bottom: 86%;
       right: 35%;
     }
+
+    #text-link{
+      position: absolute;
+      bottom: 82%;
+      right: 38%;
+    }
   </style>
 
 
@@ -201,6 +207,8 @@
     </div>    
 
     <h5 id="text-pagina">Página #</h5>
+    <a id="text-link" class="text-center" href="#!" target="_blank">Ver Cifra</a>
+    
 
     <div class="magazine-viewport" id="flipfull">
 
